# sqnt-hardware-demo

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  ROADMAP.md  pyproject.toml
device_graphs/: grid_3x3.json  grid_4x4.json  heavy_hex_toy.json  line_n12.json
noise_models/: amplitude_damping.json  dephasing.json  depolarizing.json  minimal.json  none.json
phase3_inputs/: README.md  compilation_target_gate_set.json  device_heavy_hex_min.json  device_lnn_8.json  routing_cost_weights.json
scripts/: download_cifar10.py  download_mnist.py  make_figures.py  make_figures_learned.py  make_figures_recovery.py  run_all.py
src/sqnt_hardware_demo/: __init__.py  adaptive_topology.py  circuit_targets.py  compilation.py  constraints.py  experiments.py  graphs.py  identifiability.py  mixture.py  mlp.py  multi_observable.py  sim_backends.py  sqnt_layer.py  train_demo.py
tests/: README.md  __init__.py  test_constraints.py  test_mixture.py  test_phase3_compilation_simulation.py  test_phase3_input_loading.py  test_phase4_multi_observable.py  test_phase5_adaptive_topology.py  test_regime_formatting.py  test_sqnt_hardware_demo.py
